# hot-take-generator

./: .gitignore  .pre-commit-config.yaml  .pre-commit-setup.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPERS.md  LICENSE  Makefile  README.md  ROADMAP.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: main.yaml
backend/: .coveragerc  .dockerignore  .env.example  Dockerfile  Makefile  SEARCH_SERVICES_GUIDE.md  mkdocs.yml  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/agents/: anthropic_agent.py  base.py  openai_agent.py
backend/app/api/: routes.py
backend/app/core/: config.py  prompts.py
backend/app/models/: schemas.py
backend/app/observability/: langfuse.py
backend/app/services/: cache.py  hot_take_service.py  news_search_service.py  search_quality.py  web_search_service.py
backend/app/services/search_providers/: __init__.py  base.py  brave_provider.py  serper_provider.py
backend/docs/: architecture.md  ci-cd.md  environment-variables.md  getting-started.md  index.md  search-services.md
backend/docs/backend/: api.md  index.md
backend/docs/frontend/: index.md
backend/tests/: conftest.py  test_agents.py  test_api.py  test_cache.py  test_config.py  test_integration.py  test_models.py  test_news_search.py  test_search_providers.py  test_search_quality.py  test_services.py  test_streaming.py  test_web_search.py  utils.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  config.ts  index.css
frontend/src/components/: HotTakeGenerator.css  HotTakeGenerator.test.tsx  HotTakeGenerator.tsx  Layout.css  Layout.test.tsx  Layout.tsx  MarkdownText.tsx
frontend/src/hooks/: useDarkMode.ts  useStreamingGenerate.test.ts  useStreamingGenerate.ts
frontend/src/pages/: AboutPage.test.tsx  AboutPage.tsx  AgentsPage.test.tsx  AgentsPage.tsx  HistoryPage.test.tsx  HistoryPage.tsx  Pages.css  (+6 more)
(+1 files in other folders)
