[project]
name = "hot-take-generator"
version = "0.1.0"
description = "A full-stack application for generating hot takes using LLM agents"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.2",
    "openai>=1.3.7",
    "anthropic>=0.7.8",
    "langchain>=0.0.340",
    "langchain-openai>=0.0.2",
    "langchain-anthropic>=0.0.1",
    "python-multipart>=0.0.6",
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
    "feedparser>=6.0.10",
    "newspaper3k>=0.2.8",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]